a notebook was added for data_cleanup; missing values were dealt with

--- a/01_data_cleanup.ipynb
+++ b/01_data_cleanup.ipynb
@@ -2,19 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +55,14 @@
        "      <th>halftime_away_goals</th>\n",
        "      <th>halftime_result</th>\n",
        "      <th>...</th>\n",
-       "      <th>home_fouls_committed_y</th>\n",
-       "      <th>away_fouls_committed_y</th>\n",
+       "      <th>home_fouls_committed</th>\n",
+       "      <th>away_fouls_committed</th>\n",
        "      <th>home_fouls_won</th>\n",
        "      <th>away_fouls_won</th>\n",
-       "      <th>home_yellow_cards_y</th>\n",
-       "      <th>away_yellow_cards_y</th>\n",
-       "      <th>home_red_cards_y</th>\n",
-       "      <th>away_red_cards_y</th>\n",
+       "      <th>home_yellow_cards</th>\n",
+       "      <th>away_yellow_cards</th>\n",
+       "      <th>home_red_cards</th>\n",
+       "      <th>away_red_cards</th>\n",
        "      <th>home_xg</th>\n",
        "      <th>away_xg</th>\n",
        "    </tr>\n",
@@ -328,7 +334,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2122 rows × 85 columns</p>\n",
+       "<p>2122 rows × 73 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -371,49 +377,49 @@
        "2120                    0                    1               A  ...   \n",
        "2121                    1                    1               D  ...   \n",
        "\n",
-       "      home_fouls_committed_y  away_fouls_committed_y  home_fouls_won  \\\n",
-       "0                         17                      17              16   \n",
-       "1                         25                      13              13   \n",
-       "2                         12                      11              10   \n",
-       "3                         15                      15              14   \n",
-       "4                         14                      12              12   \n",
-       "...                      ...                     ...             ...   \n",
-       "2117                      17                       8               7   \n",
-       "2118                       6                       5               4   \n",
-       "2119                      13                      11              11   \n",
-       "2120                      10                      15              15   \n",
-       "2121                       9                      13              13   \n",
+       "      home_fouls_committed  away_fouls_committed  home_fouls_won  \\\n",
+       "0                       17                    17              16   \n",
+       "1                       25                    13              13   \n",
+       "2                       12                    11              10   \n",
+       "3                       15                    15              14   \n",
+       "4                       14                    12              12   \n",
+       "...                    ...                   ...             ...   \n",
+       "2117                    17                     8               7   \n",
+       "2118                     6                     5               4   \n",
+       "2119                    13                    11              11   \n",
+       "2120                    10                    15              15   \n",
+       "2121                     9                    13              13   \n",
        "\n",
-       "      away_fouls_won  home_yellow_cards_y  away_yellow_cards_y  \\\n",
-       "0                 17                    0                    1   \n",
-       "1                 24                    3                    2   \n",
-       "2                 11                    3                    1   \n",
-       "3                 15                    2                    4   \n",
-       "4                 14                    2                    4   \n",
-       "...              ...                  ...                  ...   \n",
-       "2117              17                    5                    5   \n",
-       "2118               6                    1                    3   \n",
-       "2119              13                    3                    3   \n",
-       "2120               9                    4                    2   \n",
-       "2121               9                    0                    1   \n",
+       "      away_fouls_won  home_yellow_cards  away_yellow_cards  home_red_cards  \\\n",
+       "0                 17                  0                  1               0   \n",
+       "1                 24                  3                  2               0   \n",
+       "2                 11                  3                  1               0   \n",
+       "3                 15                  2                  4               0   \n",
+       "4                 14                  2                  4               1   \n",
+       "...              ...                ...                ...             ...   \n",
+       "2117              17                  5                  5               0   \n",
+       "2118               6                  1                  3               0   \n",
+       "2119              13                  3                  3               0   \n",
+       "2120               9                  4                  2               1   \n",
+       "2121               9                  0                  1               0   \n",
        "\n",
-       "      home_red_cards_y  away_red_cards_y  home_xg  away_xg  \n",
-       "0                    0                 0      1.3      1.1  \n",
-       "1                    0                 1      1.4      0.2  \n",
-       "2                    0                 0      1.8      2.1  \n",
-       "3                    0                 1      2.2      0.7  \n",
-       "4                    1                 0      2.4      1.3  \n",
-       "...                ...               ...      ...      ...  \n",
-       "2117                 0                 0      1.6      1.2  \n",
-       "2118                 0                 1      1.8      0.5  \n",
-       "2119                 0                 0      1.0      1.1  \n",
-       "2120                 1                 0      2.2      1.0  \n",
-       "2121                 0                 0      1.6      0.6  \n",
+       "      away_red_cards  home_xg  away_xg  \n",
+       "0                  0      1.3      1.1  \n",
+       "1                  1      1.4      0.2  \n",
+       "2                  0      1.8      2.1  \n",
+       "3                  1      2.2      0.7  \n",
+       "4                  0      2.4      1.3  \n",
+       "...              ...      ...      ...  \n",
+       "2117               0      1.6      1.2  \n",
+       "2118               1      1.8      0.5  \n",
+       "2119               0      1.0      1.1  \n",
+       "2120               0      2.2      1.0  \n",
+       "2121               0      1.6      0.6  \n",
        "\n",
-       "[2122 rows x 85 columns]"
+       "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,6 +428,132 @@
     "df = pd.read_csv(\"./dataset/dataset.csv\", parse_dates=['date'])\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dealing with missing values"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following features contain missing values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pinnaclesports_home_win_odds              3\n",
+       "pinnaclesports_draw_odds                  3\n",
+       "pinnaclesports_away_win_odds              3\n",
+       "pinnaclesports_closing_home_win_odds      1\n",
+       "pinnaclesports_closing_draw_odds          1\n",
+       "pinnaclesports_closing_away_win_odds      1\n",
+       "attendance                              487\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isna_sum = df.isna().sum()\n",
+    "isna_features = isna_sum[isna_sum > 0]\n",
+    "\n",
+    "isna_features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'attendance' (the total number of people attending the venue to watch the match) contains too many missing values and since it cannot be deducted from other features, the best strategy is to drop this feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('attendance', axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As for the other columns including missing values, since the total number of instances are too few, those instances can safely be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(axis='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['season', 'date', 'home', 'away', 'fulltime_home_goals',\n",
+       "       'fulltime_away_goals', 'fulltime_result', 'halftime_home_goals',\n",
+       "       'halftime_away_goals', 'halftime_result', 'bet365_home_win_odds',\n",
+       "       'bet365_draw_odds', 'bet365_away_win_odds', 'betandwin_home_win_odds',\n",
+       "       'betandwin_draw_odds', 'betandwin_away_win_odds',\n",
+       "       'interwetten_home_win_odds', 'interwetten_draw_odds',\n",
+       "       'interwetten_away_win_odds', 'pinnaclesports_home_win_odds',\n",
+       "       'pinnaclesports_draw_odds', 'pinnaclesports_away_win_odds',\n",
+       "       'williamhill_home_win_odds', 'williamhill_draw_odds',\n",
+       "       'williamhill_away_win_odds', 'vcbet_home_win_odds', 'vcbet_draw_odds',\n",
+       "       'vcbet_away_win_odds', 'pinnaclesports_closing_home_win_odds',\n",
+       "       'pinnaclesports_closing_draw_odds',\n",
+       "       'pinnaclesports_closing_away_win_odds', 'home_pre_rating',\n",
+       "       'home_rating_delta', 'home_post_rating', 'away_pre_rating',\n",
+       "       'away_rating_delta', 'away_post_rating', 'venue', 'home_possession',\n",
+       "       'away_possession', 'home_total_shots', 'away_total_shots',\n",
+       "       'home_shots_on_target', 'away_shots_on_target', 'home_shots_off_target',\n",
+       "       'away_shots_off_target', 'home_blocked', 'away_blocked',\n",
+       "       'home_passing_percent', 'away_passing_percent',\n",
+       "       'home_clear_cut_chances', 'away_clear_cut_chances', 'home_corners',\n",
+       "       'away_corners', 'home_offsides', 'away_offsides',\n",
+       "       'home_tackles_percent', 'away_tackles_percent', 'home_aerial_duels',\n",
+       "       'away_aerial_duels', 'home_saves', 'away_saves', 'home_fouls_committed',\n",
+       "       'away_fouls_committed', 'home_fouls_won', 'away_fouls_won',\n",
+       "       'home_yellow_cards', 'away_yellow_cards', 'home_red_cards',\n",
+       "       'away_red_cards', 'home_xg', 'away_xg'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   }
  ],
