--- a/dataset/dataset_preparation.ipynb
+++ b/dataset/dataset_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "28              Almeria           24"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "28      Almeria           23"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "28           UD Almería           25"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "28          Almería           38"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,30 +1301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "matches dataset's shape: (2130, 43)\n",
+      "matches dataset's shape: (2130, 31)\n",
       "ratings dataset's shape: (2149, 9)\n",
       "stats dataset's shape: (2127, 37)\n",
       "xg dataset's shape: (2280, 5)\n",
-      "final resulting dataset's shape: (2122, 85)\n",
+      "final resulting dataset's shape: (2122, 73)\n",
       "\n",
       "resulting columns:\n",
       "------------------------------\n",
       "Index(['season', 'date', 'home', 'away', 'fulltime_home_goals',\n",
       "       'fulltime_away_goals', 'fulltime_result', 'halftime_home_goals',\n",
-      "       'halftime_away_goals', 'halftime_result', 'home_total_shots_x',\n",
-      "       'away_total_shots_x', 'home_shots_on_target_x',\n",
-      "       'away_shots_on_target_x', 'home_fouls_committed_x',\n",
-      "       'away_fouls_committed_x', 'home_corners_x', 'away_corners_x',\n",
-      "       'home_yellow_cards_x', 'away_yellow_cards_x', 'home_red_cards_x',\n",
-      "       'away_red_cards_x', 'bet365_home_win_odds', 'bet365_draw_odds',\n",
-      "       'bet365_away_win_odds', 'betandwin_home_win_odds',\n",
+      "       'halftime_away_goals', 'halftime_result', 'bet365_home_win_odds',\n",
+      "       'bet365_draw_odds', 'bet365_away_win_odds', 'betandwin_home_win_odds',\n",
       "       'betandwin_draw_odds', 'betandwin_away_win_odds',\n",
       "       'interwetten_home_win_odds', 'interwetten_draw_odds',\n",
       "       'interwetten_away_win_odds', 'pinnaclesports_home_win_odds',\n",
@@ -1336,18 +1331,17 @@
       "       'pinnaclesports_closing_away_win_odds', 'home_pre_rating',\n",
       "       'home_rating_delta', 'home_post_rating', 'away_pre_rating',\n",
       "       'away_rating_delta', 'away_post_rating', 'venue', 'attendance',\n",
-      "       'home_possession', 'away_possession', 'home_total_shots_y',\n",
-      "       'away_total_shots_y', 'home_shots_on_target_y',\n",
-      "       'away_shots_on_target_y', 'home_shots_off_target',\n",
-      "       'away_shots_off_target', 'home_blocked', 'away_blocked',\n",
-      "       'home_passing_percent', 'away_passing_percent',\n",
-      "       'home_clear_cut_chances', 'away_clear_cut_chances', 'home_corners_y',\n",
-      "       'away_corners_y', 'home_offsides', 'away_offsides',\n",
+      "       'home_possession', 'away_possession', 'home_total_shots',\n",
+      "       'away_total_shots', 'home_shots_on_target', 'away_shots_on_target',\n",
+      "       'home_shots_off_target', 'away_shots_off_target', 'home_blocked',\n",
+      "       'away_blocked', 'home_passing_percent', 'away_passing_percent',\n",
+      "       'home_clear_cut_chances', 'away_clear_cut_chances', 'home_corners',\n",
+      "       'away_corners', 'home_offsides', 'away_offsides',\n",
       "       'home_tackles_percent', 'away_tackles_percent', 'home_aerial_duels',\n",
-      "       'away_aerial_duels', 'home_saves', 'away_saves',\n",
-      "       'home_fouls_committed_y', 'away_fouls_committed_y', 'home_fouls_won',\n",
-      "       'away_fouls_won', 'home_yellow_cards_y', 'away_yellow_cards_y',\n",
-      "       'home_red_cards_y', 'away_red_cards_y', 'home_xg', 'away_xg'],\n",
+      "       'away_aerial_duels', 'home_saves', 'away_saves', 'home_fouls_committed',\n",
+      "       'away_fouls_committed', 'home_fouls_won', 'away_fouls_won',\n",
+      "       'home_yellow_cards', 'away_yellow_cards', 'home_red_cards',\n",
+      "       'away_red_cards', 'home_xg', 'away_xg'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -1378,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
