--- a/dataset/matches/consolidation.ipynb
+++ b/dataset/matches/consolidation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "6cf318df",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "61ab83be",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "df8bf6cd",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "3d5ed6ee",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "093020c3",
    "metadata": {},
    "outputs": [],
@@ -238,6 +238,39 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "82df5165",
+   "metadata": {},
+   "source": [
+    "## Dropping unnecessary columns\n",
+    "These columns refer to in-game stats and are also retrieved from other sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6984c871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop([\n",
+    "    'home_total_shots',\n",
+    "    'away_total_shots',\n",
+    "    'home_shots_on_target',\n",
+    "    'away_shots_on_target',\n",
+    "    'home_fouls_committed',\n",
+    "    'away_fouls_committed',\n",
+    "    'home_corners',\n",
+    "    'away_corners',\n",
+    "    'home_yellow_cards',\n",
+    "    'away_yellow_cards',\n",
+    "    'home_red_cards',\n",
+    "    'away_red_cards',\n",
+    "], axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "1af6d886",
    "metadata": {},
    "source": [
@@ -255,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "0960411c",
    "metadata": {},
    "outputs": [],
@@ -278,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "id": "60cd497e",
    "metadata": {},
    "outputs": [],
