type casting performed for numerical features

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,49 +511,133 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature types and catings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['season', 'date', 'home', 'away', 'fulltime_home_goals',\n",
-       "       'fulltime_away_goals', 'fulltime_result', 'halftime_home_goals',\n",
-       "       'halftime_away_goals', 'halftime_result', 'bet365_home_win_odds',\n",
-       "       'bet365_draw_odds', 'bet365_away_win_odds', 'betandwin_home_win_odds',\n",
-       "       'betandwin_draw_odds', 'betandwin_away_win_odds',\n",
-       "       'interwetten_home_win_odds', 'interwetten_draw_odds',\n",
-       "       'interwetten_away_win_odds', 'pinnaclesports_home_win_odds',\n",
-       "       'pinnaclesports_draw_odds', 'pinnaclesports_away_win_odds',\n",
-       "       'williamhill_home_win_odds', 'williamhill_draw_odds',\n",
-       "       'williamhill_away_win_odds', 'vcbet_home_win_odds', 'vcbet_draw_odds',\n",
-       "       'vcbet_away_win_odds', 'pinnaclesports_closing_home_win_odds',\n",
-       "       'pinnaclesports_closing_draw_odds',\n",
-       "       'pinnaclesports_closing_away_win_odds', 'home_pre_rating',\n",
-       "       'home_rating_delta', 'home_post_rating', 'away_pre_rating',\n",
-       "       'away_rating_delta', 'away_post_rating', 'venue', 'home_possession',\n",
-       "       'away_possession', 'home_total_shots', 'away_total_shots',\n",
-       "       'home_shots_on_target', 'away_shots_on_target', 'home_shots_off_target',\n",
-       "       'away_shots_off_target', 'home_blocked', 'away_blocked',\n",
-       "       'home_passing_percent', 'away_passing_percent',\n",
-       "       'home_clear_cut_chances', 'away_clear_cut_chances', 'home_corners',\n",
-       "       'away_corners', 'home_offsides', 'away_offsides',\n",
-       "       'home_tackles_percent', 'away_tackles_percent', 'home_aerial_duels',\n",
-       "       'away_aerial_duels', 'home_saves', 'away_saves', 'home_fouls_committed',\n",
-       "       'away_fouls_committed', 'home_fouls_won', 'away_fouls_won',\n",
-       "       'home_yellow_cards', 'away_yellow_cards', 'home_red_cards',\n",
-       "       'away_red_cards', 'home_xg', 'away_xg'],\n",
-       "      dtype='object')"
+       "season                                          object\n",
+       "date                                    datetime64[ns]\n",
+       "home                                            object\n",
+       "away                                            object\n",
+       "fulltime_home_goals                              int64\n",
+       "fulltime_away_goals                              int64\n",
+       "fulltime_result                                 object\n",
+       "halftime_home_goals                              int64\n",
+       "halftime_away_goals                              int64\n",
+       "halftime_result                                 object\n",
+       "bet365_home_win_odds                           float64\n",
+       "bet365_draw_odds                               float64\n",
+       "bet365_away_win_odds                           float64\n",
+       "betandwin_home_win_odds                        float64\n",
+       "betandwin_draw_odds                            float64\n",
+       "betandwin_away_win_odds                        float64\n",
+       "interwetten_home_win_odds                      float64\n",
+       "interwetten_draw_odds                          float64\n",
+       "interwetten_away_win_odds                      float64\n",
+       "pinnaclesports_home_win_odds                   float64\n",
+       "pinnaclesports_draw_odds                       float64\n",
+       "pinnaclesports_away_win_odds                   float64\n",
+       "williamhill_home_win_odds                      float64\n",
+       "williamhill_draw_odds                          float64\n",
+       "williamhill_away_win_odds                      float64\n",
+       "vcbet_home_win_odds                            float64\n",
+       "vcbet_draw_odds                                float64\n",
+       "vcbet_away_win_odds                            float64\n",
+       "pinnaclesports_closing_home_win_odds           float64\n",
+       "pinnaclesports_closing_draw_odds               float64\n",
+       "pinnaclesports_closing_away_win_odds           float64\n",
+       "home_pre_rating                                  int64\n",
+       "home_rating_delta                                int32\n",
+       "home_post_rating                                 int32\n",
+       "away_pre_rating                                  int64\n",
+       "away_rating_delta                                int32\n",
+       "away_post_rating                                 int32\n",
+       "venue                                           object\n",
+       "home_possession                                  int32\n",
+       "away_possession                                  int32\n",
+       "home_total_shots                                 int64\n",
+       "away_total_shots                                 int64\n",
+       "home_shots_on_target                             int64\n",
+       "away_shots_on_target                             int64\n",
+       "home_shots_off_target                            int64\n",
+       "away_shots_off_target                            int64\n",
+       "home_blocked                                     int64\n",
+       "away_blocked                                     int64\n",
+       "home_passing_percent                             int32\n",
+       "away_passing_percent                             int32\n",
+       "home_clear_cut_chances                           int64\n",
+       "away_clear_cut_chances                           int64\n",
+       "home_corners                                     int64\n",
+       "away_corners                                     int64\n",
+       "home_offsides                                    int64\n",
+       "away_offsides                                    int64\n",
+       "home_tackles_percent                             int32\n",
+       "away_tackles_percent                             int32\n",
+       "home_aerial_duels                                int32\n",
+       "away_aerial_duels                                int32\n",
+       "home_saves                                       int64\n",
+       "away_saves                                       int64\n",
+       "home_fouls_committed                             int64\n",
+       "away_fouls_committed                             int64\n",
+       "home_fouls_won                                   int64\n",
+       "away_fouls_won                                   int64\n",
+       "home_yellow_cards                                int64\n",
+       "away_yellow_cards                                int64\n",
+       "home_red_cards                                   int64\n",
+       "away_red_cards                                   int64\n",
+       "home_xg                                        float64\n",
+       "away_xg                                        float64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df.columns"
+    "from IPython.display import display\n",
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
+    "    display(df.dtypes) "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Casting numerical features to their correct dtypes\n",
+    "The betting features as well as the expected goal metrics are by nature decimal numbers; other than those, the rest of the numerical features should be cast to integer type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['home_rating_delta'] = df['home_rating_delta'].astype('int')\n",
+    "df['home_post_rating'] = df['home_post_rating'].astype('int')\n",
+    "df['away_rating_delta'] = df['away_rating_delta'].astype('int')\n",
+    "df['away_post_rating'] = df['away_post_rating'].astype('int')\n",
+    "df['home_possession'] = df['home_possession'].astype('int')\n",
+    "df['away_possession'] = df['away_possession'].astype('int')\n",
+    "df['home_passing_percent'] = df['home_passing_percent'].astype('int')\n",
+    "df['away_passing_percent'] = df['away_passing_percent'].astype('int')\n",
+    "df['home_tackles_percent'] = df['home_tackles_percent'].astype('int')\n",
+    "df['away_tackles_percent'] = df['away_tackles_percent'].astype('int')\n",
+    "df['home_aerial_duels'] = df['home_aerial_duels'].astype('int')\n",
+    "df['away_aerial_duels'] = df['away_aerial_duels'].astype('int')\n"
    ]
   }
  ],
