--- a/dataset/dataset_preparation.ipynb
+++ b/dataset/dataset_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "28              Almeria           24"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "28      Almeria           23"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "28           UD Almería           25"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "28          Almería           38"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1282,12 +1282,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_xg['home'] = df_xg['home'].replace(df_xg_team_similarities)\n",
     "df_xg['away'] = df_xg['away'].replace(df_xg_team_similarities)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Making venue names consistent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Alfredo Di Stefano.', 'Anoeta', 'Balaidos', 'Balaidos.',\n",
+       "       'Benito Villamarin', 'Benito Villamarin.', 'Butarque', 'Butarque.',\n",
+       "       'Camp Nou', 'Camp Nou.', 'Campo de Futbol de Vallecas',\n",
+       "       'Ciutat de Valencia', 'Ciutat de Valencia.',\n",
+       "       'Coliseum Alfonso Perez', 'Coliseum Alfonso Perez.',\n",
+       "       'Cornella - El Prat', 'Cornella - El Prat.', 'El Alcoraz',\n",
+       "       'El Alcoraz.', 'El Sadar', 'El Sadar.', 'Estadio Camilo Cano.',\n",
+       "       'Estadio Los Carmenes', 'Estadio Los Carmenes.',\n",
+       "       'Estadio Municipal de Ipura', 'Estadio Municipal de Ipura.',\n",
+       "       'Estadio de la Ceramica', 'Estadio de la Ceramica.',\n",
+       "       'Gran Canaria', 'Iberostar Estadi', 'Iberostar Estadi.',\n",
+       "       'Jose Zorrilla', 'Jose Zorrilla.', 'Juegos del Mediterraneo',\n",
+       "       'La Rosaleda', 'Martinez Valero', 'Martinez Valero.',\n",
+       "       'Mendizorroza', 'Mendizorroza.', 'Mestalla', 'Mestalla.',\n",
+       "       'Municipal de Montilivi', 'Ramon Sanchez Pizjuan',\n",
+       "       'Ramon Sanchez Pizjuan.', 'Ramon de Carranza',\n",
+       "       'Ramon de Carranza.', 'Reale Seguros Stadium',\n",
+       "       'Reale Seguros Stadium.', 'Riazor', 'San Mames', 'San Mames.',\n",
+       "       'Santiago Bernabeu', 'Spotify Camp Nou', 'Wanda Metropolitano',\n",
+       "       'Wanda Metropolitano.'], dtype=object)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stats['venue'].sort_values().unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing dot (.) from the end of the venue names\n",
+    "\n",
+    "df_stats['venue'] = df_stats['venue'].apply(\n",
+    "    lambda x: x if x[-1] != '.' else x[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Alfredo Di Stefano', 'Anoeta', 'Balaidos', 'Benito Villamarin',\n",
+       "       'Butarque', 'Camp Nou', 'Campo de Futbol de Vallecas',\n",
+       "       'Ciutat de Valencia', 'Coliseum Alfonso Perez',\n",
+       "       'Cornella - El Prat', 'El Alcoraz', 'El Sadar',\n",
+       "       'Estadio Camilo Cano', 'Estadio Los Carmenes',\n",
+       "       'Estadio Municipal de Ipura', 'Estadio de la Ceramica',\n",
+       "       'Gran Canaria', 'Iberostar Estadi', 'Jose Zorrilla',\n",
+       "       'Juegos del Mediterraneo', 'La Rosaleda', 'Martinez Valero',\n",
+       "       'Mendizorroza', 'Mestalla', 'Municipal de Montilivi',\n",
+       "       'Ramon Sanchez Pizjuan', 'Ramon de Carranza',\n",
+       "       'Reale Seguros Stadium', 'Riazor', 'San Mames',\n",
+       "       'Santiago Bernabeu', 'Spotify Camp Nou', 'Wanda Metropolitano'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stats['venue'].sort_values().unique()"
    ]
   },
   {
@@ -1301,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
