--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "Name: halftime_result, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        " 'pinnaclesports_closing_away_win_odds']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -966,14 +966,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bet_probs(row):\n",
     "    home_win_odds, draw_odds, away_win_odds = row[['bet365_home_win_odds', 'bet365_draw_odds', 'bet365_away_win_odds']]\n",
     "    total_odds = sum([home_win_odds, draw_odds, away_win_odds])\n",
-    "    return [val/total_odds for val in [home_win_odds, draw_odds, away_win_odds]]\n",
+    "    return [round(val/total_odds, 2) for val in [home_win_odds, draw_odds, away_win_odds]]\n",
     "\n",
     "df[['bet365_home_win_prob', 'bet365_draw_prob', 'bet365_away_win_prob']] = df.apply(\n",
     "    lambda row: get_bet_probs(row),\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
        " 'away_post_rating']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1914,186 +1914,214 @@
       "fulltime_home_goals\n",
       "------------------------------\n",
       "Total number of outliers: 12\n",
-      "[6 7 8] \n",
+      "Mean=1.44, Std=1.23\n",
+      "Outlier values: [6 7 8]\n",
       "\n",
       "fulltime_away_goals\n",
       "------------------------------\n",
       "Total number of outliers: 18\n",
-      "[5 6] \n",
+      "Mean=1.1, Std=1.09\n",
+      "Outlier values: [5 6]\n",
       "\n",
       "halftime_home_goals\n",
       "------------------------------\n",
       "Total number of outliers: 11\n",
-      "[5 4] \n",
+      "Mean=0.62, Std=0.8\n",
+      "Outlier values: [5 4]\n",
       "\n",
       "halftime_away_goals\n",
       "------------------------------\n",
       "Total number of outliers: 30\n",
-      "[3 4 5] \n",
+      "Mean=0.48, Std=0.71\n",
+      "Outlier values: [3 4 5]\n",
       "\n",
       "home_post_rating\n",
       "------------------------------\n",
       "Total number of outliers: 5\n",
-      "[2406 2396 2383 2401 2393] \n",
+      "Mean=1985.73, Std=130.67\n",
+      "Outlier values: [2406 2396 2383 2401 2393]\n",
       "\n",
       "away_post_rating\n",
       "------------------------------\n",
       "Total number of outliers: 4\n",
-      "[2415 2403 2385] \n",
+      "Mean=1987.09, Std=130.85\n",
+      "Outlier values: [2415 2403 2385]\n",
       "\n",
       "home_total_shots\n",
       "------------------------------\n",
       "Total number of outliers: 15\n",
-      "[28 30 29 33 32 36] \n",
+      "Mean=12.99, Std=4.84\n",
+      "Outlier values: [28 30 29 33 32 36]\n",
       "\n",
       "away_total_shots\n",
       "------------------------------\n",
       "Total number of outliers: 13\n",
-      "[23 24 27 25 29] \n",
+      "Mean=10.34, Std=4.19\n",
+      "Outlier values: [23 24 27 25 29]\n",
       "\n",
       "home_shots_on_target\n",
       "------------------------------\n",
       "Total number of outliers: 20\n",
-      "[14 12 17 13 16] \n",
+      "Mean=4.5, Std=2.43\n",
+      "Outlier values: [14 12 17 13 16]\n",
       "\n",
       "away_shots_on_target\n",
       "------------------------------\n",
       "Total number of outliers: 19\n",
-      "[11 10 13 12 15] \n",
+      "Mean=3.57, Std=2.11\n",
+      "Outlier values: [11 10 13 12 15]\n",
       "\n",
       "home_shots_off_target\n",
       "------------------------------\n",
       "Total number of outliers: 14\n",
-      "[14 15 17 18 16] \n",
+      "Mean=5.47, Std=2.7\n",
+      "Outlier values: [14 15 17 18 16]\n",
       "\n",
       "away_shots_off_target\n",
       "------------------------------\n",
       "Total number of outliers: 14\n",
-      "[12 13 14] \n",
+      "Mean=4.29, Std=2.37\n",
+      "Outlier values: [12 13 14]\n",
       "\n",
       "home_blocked\n",
       "------------------------------\n",
       "Total number of outliers: 20\n",
-      "[10 12 11 15] \n",
+      "Mean=3.02, Std=2.09\n",
+      "Outlier values: [10 12 11 15]\n",
       "\n",
       "away_blocked\n",
       "------------------------------\n",
       "Total number of outliers: 19\n",
-      "[ 9 10 11 13] \n",
+      "Mean=2.48, Std=1.89\n",
+      "Outlier values: [ 9 10 11 13]\n",
       "\n",
       "home_clear_cut_chances\n",
       "------------------------------\n",
       "Total number of outliers: 32\n",
-      "[9 6 7 8] \n",
+      "Mean=1.58, Std=1.42\n",
+      "Outlier values: [9 6 7 8]\n",
       "\n",
       "away_clear_cut_chances\n",
       "------------------------------\n",
       "Total number of outliers: 13\n",
-      "[6 7] \n",
+      "Mean=1.25, Std=1.25\n",
+      "Outlier values: [6 7]\n",
       "\n",
       "home_corners\n",
       "------------------------------\n",
       "Total number of outliers: 16\n",
-      "[14 16 15] \n",
+      "Mean=5.22, Std=2.77\n",
+      "Outlier values: [14 16 15]\n",
       "\n",
       "away_corners\n",
       "------------------------------\n",
       "Total number of outliers: 18\n",
-      "[14 13 12 15] \n",
+      "Mean=4.18, Std=2.47\n",
+      "Outlier values: [14 13 12 15]\n",
       "\n",
       "home_offsides\n",
       "------------------------------\n",
       "Total number of outliers: 17\n",
-      "[14  9 10  8] \n",
+      "Mean=2.29, Std=1.75\n",
+      "Outlier values: [14  9 10  8]\n",
       "\n",
       "away_offsides\n",
       "------------------------------\n",
       "Total number of outliers: 20\n",
-      "[14  8 11  9] \n",
+      "Mean=2.1, Std=1.77\n",
+      "Outlier values: [14  8 11  9]\n",
       "\n",
       "home_aerial_duels\n",
       "------------------------------\n",
       "Total number of outliers: 7\n",
-      "[ 87  93 100  84] \n",
+      "Mean=50.08, Std=10.68\n",
+      "Outlier values: [ 87  93 100  84]\n",
       "\n",
       "away_aerial_duels\n",
       "------------------------------\n",
       "Total number of outliers: 1\n",
-      "[83] \n",
+      "Mean=49.1, Std=10.69\n",
+      "Outlier values: [83]\n",
       "\n",
       "home_saves\n",
       "------------------------------\n",
       "Total number of outliers: 15\n",
-      "[ 9  8 10 13] \n",
+      "Mean=2.46, Std=1.7\n",
+      "Outlier values: [ 9  8 10 13]\n",
       "\n",
       "away_saves\n",
       "------------------------------\n",
       "Total number of outliers: 16\n",
-      "[10 11 14 12] \n",
+      "Mean=3.07, Std=1.99\n",
+      "Outlier values: [10 11 14 12]\n",
       "\n",
       "home_fouls_committed\n",
       "------------------------------\n",
       "Total number of outliers: 9\n",
-      "[29 28 26] \n",
+      "Mean=13.58, Std=4.11\n",
+      "Outlier values: [29 28 26]\n",
       "\n",
       "away_fouls_committed\n",
       "------------------------------\n",
       "Total number of outliers: 12\n",
-      "[29 28 26 30] \n",
+      "Mean=13.43, Std=4.14\n",
+      "Outlier values: [29 28 26 30]\n",
       "\n",
       "home_fouls_won\n",
       "------------------------------\n",
       "Total number of outliers: 13\n",
-      "[25 27 28 26 29] \n",
+      "Mean=12.63, Std=4.04\n",
+      "Outlier values: [25 27 28 26 29]\n",
       "\n",
       "away_fouls_won\n",
       "------------------------------\n",
       "Total number of outliers: 9\n",
-      "[28 27 25 26 29] \n",
+      "Mean=12.84, Std=4.0\n",
+      "Outlier values: [28 27 25 26 29]\n",
       "\n",
       "home_yellow_cards\n",
       "------------------------------\n",
       "Total number of outliers: 13\n",
-      "[7 8] \n",
+      "Mean=2.32, Std=1.47\n",
+      "Outlier values: [7 8]\n",
       "\n",
       "away_yellow_cards\n",
       "------------------------------\n",
       "Total number of outliers: 21\n",
-      "[8 7] \n",
+      "Mean=2.47, Std=1.48\n",
+      "Outlier values: [8 7]\n",
       "\n",
       "home_red_cards\n",
       "------------------------------\n",
       "Total number of outliers: 15\n",
-      "[2 3] \n",
+      "Mean=0.12, Std=0.35\n",
+      "Outlier values: [2 3]\n",
       "\n",
       "away_red_cards\n",
       "------------------------------\n",
       "Total number of outliers: 11\n",
-      "[2] \n",
+      "Mean=0.12, Std=0.34\n",
+      "Outlier values: [2]\n",
       "\n",
       "home_xg\n",
       "------------------------------\n",
       "Total number of outliers: 25\n",
-      "[5.1 4.  5.6 3.9 4.1 4.3 5.3 4.2 4.6 4.8 4.7 4.4] \n",
+      "Mean=1.45, Std=0.8\n",
+      "Outlier values: [5.1 4.  5.6 3.9 4.1 4.3 5.3 4.2 4.6 4.8 4.7 4.4]\n",
       "\n",
       "away_xg\n",
       "------------------------------\n",
-      "Total number of outliers: 25\n",
-      "[3.4 3.5 3.8 3.6 3.9 4.1 3.7 3.3 4.9 4.5 4. ] \n",
+      "Total number of outliers: 30\n",
+      "Mean=1.1, Std=0.7\n",
+      "Outlier values: [3.4 3.5 3.8 3.6 3.9 4.1 3.2 3.7 3.3 4.9 4.5 4. ]\n",
       "\n",
       "bet365_home_win_prob\n",
       "------------------------------\n",
       "Total number of outliers: 2\n",
-      "[0.66225166 0.66250974] \n",
+      "Mean=0.26, Std=0.13\n",
+      "Outlier values: [0.66225166 0.66250974]\n",
       "\n",
-      "bet365_draw_prob\n",
-      "------------------------------\n",
-      "Total number of outliers: 1\n",
-      "[0.44268406] \n",
-      "\n",
-      "(2118, 50)\n",
-      "Overall, 359 instances containing outliers were dropped.\n",
-      "(1759, 50)\n"
+      "Overall, 360 instances containing outliers were dropped.\n"
      ]
     }
    ],
@@ -2102,8 +2130,8 @@
     "\n",
     "outlier_indices = set()\n",
     "for col in outlier_cols:\n",
-    "    col_mean = df[col].mean()\n",
-    "    col_std = df[col].std()\n",
+    "    col_mean = round(df[col].mean(), 2)\n",
+    "    col_std = round(df[col].std(), 2)\n",
     "    threshold = 3\n",
     "    col_filtered = df[((df[col] - col_mean) / col_std) > 3]\n",
     "    \n",
@@ -2111,7 +2139,8 @@
     "    \n",
     "    if total_outliers > 0:\n",
     "        print(f\"{col}\\n{'-'*30}\\nTotal number of outliers: {total_outliers}\")\n",
-    "        print(col_filtered[col].unique(),\"\\n\")\n",
+    "        print(f\"Mean={col_mean}, Std={col_std}\")\n",
+    "        print(f\"Outlier values: {col_filtered[col].unique()}\\n\")\n",
     "        outlier_indices = outlier_indices.union(set(col_filtered.index))\n",
     "\n",
     "df = df.drop(outlier_indices, axis='index')\n",
