--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,20 +647,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "There are 3 groups of string features:\n",
     "<ul>\n",
-    "<li>The 'season' feature will later be used to separate the test data from the train/validation.</li>\n",
-    "<li>The 'home', 'away', and 'venue' features should be tested for possible correlation with the target variable; if positive they will be encoded, otherwise dropped.\n",
+    "<li>The 'venue' feature will be dropped</li>\n",
+    "<li>The 'season', 'home', and 'away' features will later be used for panel data analysis.</li>\n",
     "<li>The 'halftime_result' and 'fulltime_result' features will be encoded to numerical representations.</li>\n",
     "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +673,7 @@
        "Name: halftime_result, dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +696,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +783,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +889,7 @@
        " 'pinnaclesports_closing_away_win_odds']"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1024,7 @@
        " 'away_post_rating']"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1074,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "String features (features of type object) are not taken into panel data analysis; hence, here they will be analyzed as to whether they have correlation with the match result or not."
+    "String features include the name of the two participating teams in a match as well as the name of the venue where the match was taking place.<br>\n",
+    "In order to use these in the prediction process, they need to be converted into categorical variables and encoded using ordinal or one-hot encoding; however, since the current sets of values are not closed (new categories might be added in the future) the training can never contain every possible value; hence, these features cannot be used in the model and should be dropped."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'home' and 'away' features will be used for the panel data analysis and will be dropped after that; but the venue is unnecessary and can be dropped here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('venue', axis='columns')"
    ]
   },
   {
@@ -1086,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1166,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,43 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['season', 'date', 'home', 'away', 'fulltime_home_goals',\n",
-       "       'fulltime_away_goals', 'fulltime_result', 'halftime_home_goals',\n",
-       "       'halftime_away_goals', 'halftime_result', 'home_post_rating',\n",
-       "       'away_post_rating', 'venue', 'home_possession', 'away_possession',\n",
-       "       'home_total_shots', 'away_total_shots', 'home_shots_on_target',\n",
-       "       'away_shots_on_target', 'home_shots_off_target',\n",
-       "       'away_shots_off_target', 'home_blocked', 'away_blocked',\n",
-       "       'home_passing_percent', 'away_passing_percent',\n",
-       "       'home_clear_cut_chances', 'away_clear_cut_chances', 'home_corners',\n",
-       "       'away_corners', 'home_offsides', 'away_offsides',\n",
-       "       'home_tackles_percent', 'away_tackles_percent', 'home_aerial_duels',\n",
-       "       'away_aerial_duels', 'home_saves', 'away_saves', 'home_fouls_committed',\n",
-       "       'away_fouls_committed', 'home_fouls_won', 'away_fouls_won',\n",
-       "       'home_yellow_cards', 'away_yellow_cards', 'home_red_cards',\n",
-       "       'away_red_cards', 'home_xg', 'away_xg', 'bet365_home_win_prob',\n",
-       "       'bet365_draw_prob', 'bet365_away_win_prob'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1246,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1456,9 +1439,9 @@
        "      <td>0.116619</td>\n",
        "      <td>1.447120</td>\n",
        "      <td>1.103824</td>\n",
-       "      <td>0.259726</td>\n",
-       "      <td>0.355946</td>\n",
-       "      <td>0.384328</td>\n",
+       "      <td>0.259802</td>\n",
+       "      <td>0.355935</td>\n",
+       "      <td>0.384363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -1504,9 +1487,9 @@
        "      <td>0.336838</td>\n",
        "      <td>0.800224</td>\n",
        "      <td>0.701116</td>\n",
-       "      <td>0.132440</td>\n",
-       "      <td>0.028569</td>\n",
-       "      <td>0.142999</td>\n",
+       "      <td>0.132389</td>\n",
+       "      <td>0.028777</td>\n",
+       "      <td>0.143147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1552,9 +1535,9 @@
        "      <td>0.000000</td>\n",
        "      <td>0.100000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.020979</td>\n",
-       "      <td>0.229008</td>\n",
-       "      <td>0.045207</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.230000</td>\n",
+       "      <td>0.050000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -1600,9 +1583,9 @@
        "      <td>0.000000</td>\n",
        "      <td>0.900000</td>\n",
        "      <td>0.600000</td>\n",
-       "      <td>0.156471</td>\n",
-       "      <td>0.339595</td>\n",
-       "      <td>0.283237</td>\n",
+       "      <td>0.160000</td>\n",
+       "      <td>0.340000</td>\n",
+       "      <td>0.280000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1648,9 +1631,9 @@
        "      <td>0.000000</td>\n",
        "      <td>1.300000</td>\n",
        "      <td>0.900000</td>\n",
-       "      <td>0.247191</td>\n",
-       "      <td>0.358785</td>\n",
-       "      <td>0.385045</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.360000</td>\n",
+       "      <td>0.390000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1696,9 +1679,9 @@
        "      <td>0.000000</td>\n",
        "      <td>1.900000</td>\n",
        "      <td>1.500000</td>\n",
-       "      <td>0.344828</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>0.490654</td>\n",
+       "      <td>0.340000</td>\n",
+       "      <td>0.380000</td>\n",
+       "      <td>0.490000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1744,9 +1727,9 @@
        "      <td>2.000000</td>\n",
        "      <td>5.600000</td>\n",
        "      <td>4.900000</td>\n",
-       "      <td>0.662510</td>\n",
-       "      <td>0.442684</td>\n",
-       "      <td>0.725191</td>\n",
+       "      <td>0.660000</td>\n",
+       "      <td>0.440000</td>\n",
+       "      <td>0.730000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1875,13 +1858,13 @@
        "\n",
        "       bet365_home_win_prob  bet365_draw_prob  bet365_away_win_prob  \n",
        "count           2118.000000       2118.000000           2118.000000  \n",
-       "mean               0.259726          0.355946              0.384328  \n",
-       "std                0.132440          0.028569              0.142999  \n",
-       "min                0.020979          0.229008              0.045207  \n",
-       "25%                0.156471          0.339595              0.283237  \n",
-       "50%                0.247191          0.358785              0.385045  \n",
-       "75%                0.344828          0.375000              0.490654  \n",
-       "max                0.662510          0.442684              0.725191  "
+       "mean               0.259802          0.355935              0.384363  \n",
+       "std                0.132389          0.028777              0.143147  \n",
+       "min                0.020000          0.230000              0.050000  \n",
+       "25%                0.160000          0.340000              0.280000  \n",
+       "50%                0.250000          0.360000              0.390000  \n",
+       "75%                0.340000          0.380000              0.490000  \n",
+       "max                0.660000          0.440000              0.730000  "
       ]
      },
      "metadata": {},
@@ -1904,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2102,7 @@
       "------------------------------\n",
       "Total number of outliers: 2\n",
       "Mean=0.26, Std=0.13\n",
-      "Outlier values: [0.66225166 0.66250974]\n",
+      "Outlier values: [0.66]\n",
       "\n",
       "Overall, 360 instances containing outliers were dropped.\n"
      ]
