revised the dataset to omit 2022-23 season

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -962,7 +962,8 @@
     "<li>P(home_win) = home_win_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
     "<li>P(draw) = draw_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
     "<li>P(away_win) = away_win_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
-    "</ul>"
+    "</ul>\n",
+    "This step helps to make the betting odds consistent; hence allowing to use any betting service of choice during future predictions."
    ]
   },
   {
