--- a/dataset/match_stats/01_links_extraction.ipynb
+++ b/dataset/match_stats/01_links_extraction.ipynb
@@ -14,14 +14,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(17, 23)]"
+    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(17, 22)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Downloading: 100%|██████████| 6.80M/6.80M [00:02<00:00, 2.80MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
