--- a/dataset/ratings/extraction_consolidation.ipynb
+++ b/dataset/ratings/extraction_consolidation.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_years = list(range(2017, 2023))"
+    "league_years = list(range(2017, 2022))"
    ]
   },
   {
@@ -147,8 +147,7 @@
        "array(['Primera Division rel. ', 'Segunda Division ', 'Champions League ',\n",
        "       'Primera Division ', 'Europa League ', 'Copa del Rey ',\n",
        "       'Europa League q. ', 'Champions League q. ', 'Supercopa ',\n",
-       "       'Supercup ', 'Europa Conf. League ', 'Europa Conf. League q. '],\n",
-       "      dtype=object)"
+       "       'Supercup '], dtype=object)"
       ]
      },
      "execution_count": 4,
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
